# OpenGL_test

./: .gitignore
helloGL/: CMakeLists.txt
helloGL/.cache/clangd/index/: features.h.839A4F3F7C9A4375.idx  gl.h.F39A56717154A031.idx  glext.h.45DBBEEA1B6D3B60.idx  glfw3.h.B9F9F87665250868.idx  khrplatform.h.CCC456ECB0AA0FB4.idx  libc-header-start.h.DE4EC70643B7CD1B.idx  main.cpp.26E97DF7BB165504.idx  stddef.h.14138C50D91D7D00.idx
helloGL/src/: main.cpp
helloTriangle/: compile_commands.json
helloTriangle/include/glad/: glad.h
helloTriangle/src/: glad.c  main.cpp
